2007-09-07  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Ide.Templates/PartialTypeFileTemplateCondition.cs: Add a
	  "Disabled" option to PartialTypeRequirement.

2007-09-07  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Ide.Templates/FileTemplate.cs,
	  MonoDevelop.Ide.Templates/FileTemplateCondition.cs,
	  MonoDevelop.Ide.Templates/ParentProjectFileTemplateCondition.cs,
	  MonoDevelop.Ide.Templates/ClrVersionFileTemplateCondition.cs,
	  MonoDevelop.Ide.Templates/PartialTypeFileTemplateCondition.cs,
	  MonoDevelop.Ide.Gui.Dialogs/NewFileDialog.cs, MonoDevelop.Ide.addin.xml:
	  Add support for file templates with fixed names and for suggesting
	  default filenames. Add support for filtering on selected project
	  directory. Remove defunct FileTemplate.FileOptions element.
	* MonoDevelop.Ide.mdp, Makefile.am: Updated.

2007-09-07  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Content/CompletionTextEditorExtension.cs,
	  MonoDevelop.Ide.Gui.Content/TextEditorExtension.cs, MonoDevelop.Ide.mdp,
	  Makefile.am: Split TextEditorExtension in two. All code related to code
	  completion has been moved to the new subclass
	  CompletionTextEditorExtension.
	* MonoDevelop.Ide.Templates/CodeTranslationFileDescriptionTemplate.cs: Fix
	  warning.

2007-09-07  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Dialogs/ReplaceInFilesDialog.cs: Set the correct title
	  when not in replace mode. Fixes bug #82698.

2007-09-06  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Ide.Templates/FileTemplate.cs,
	  MonoDevelop.Ide.Templates/FileTemplateCondition.cs,
	  MonoDevelop.Ide.addin.xml,
	  MonoDevelop.Ide.Codons/FileTemplateConditionTypeCodon.cs: Moved
	  project/language filtering code from NewFileDialog into file template
	  classes. Added an extension point (FileTemplateCondition) for extending
	  the filters.
	* MonoDevelop.Ide.Templates/ClrVersionFileTemplateCondition.cs: New